[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "SSH Multiplexer"
documentation = "https://docs.rs/libmussh"
edition = "2018"
homepage = "https://github.com/rustyhorde/libmussh"
keywords = ["ssh", "multiplex"]
license = "MIT/Apache-2.0"
name = "libmussh"
readme = "README.md"
repository = "https://github.com/rustyhorde/libmussh"
version = "1.1.2"

[dependencies]
chrono = "0"
clap = "2"
getset = "0"
indexmap = "1"
serde = "1"
serde_derive = "1"
slog-try = "0"
toml = "0"
wait_group = "0"
ssh2 = "0"

[dependencies.lazy_static]
version = "1"
features = ["nightly"]

[dependencies.slog]
features = ["max_level_trace", "release_max_level_trace"]
version = "2"
